# adopt_spot

./: README.md
adopt-spot-backend/: Dockerfile  Makefile  README.md  app.py  pyproject.toml
adopt-spot-backend/adopt_spot_backend/: models.py  scraper.py
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.js  GlobalStyles.js  index.js  mockdata.js
client/src/components/: About.js  ContactForm.js  Home.js  NavBar.js  Pet.js  Pets.js  RulesAndRegulations.js  Search.js  style.css
client/src/contexts/: PetsContext.js
