[tool.poetry]
name = "adopt-spot-backend"
version = "0.1.0"
description = ""
authors = ["Gabrielle Toutin <gctoutin@gmail.com>"]
readme = "README.md"
packages = [{include = "adopt_spot_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
beautifulsoup4 = "^4.12.0"
requests = "^2.28.2"
bs4 = "^0.0.1"
aiohttp = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
